@@ -809,11 +809,11 @@ name|curChar
 operator|==
 literal|34
 condition|)
-name|jjCheckNAddTwoStates
+name|jjCheckNAddStates
 argument_list|(
-literal|15
+literal|0
 argument_list|,
-literal|17
+literal|2
 argument_list|)
 expr_stmt|;
 elseif|else
@@ -858,9 +858,9 @@ literal|18
 expr_stmt|;
 name|jjCheckNAddStates
 argument_list|(
-literal|0
+literal|3
 argument_list|,
-literal|4
+literal|7
 argument_list|)
 expr_stmt|;
 block|}
@@ -955,17 +955,20 @@ break|break;
 case|case
 literal|14
 case|:
+case|case
+literal|16
+case|:
 if|if
 condition|(
 name|curChar
 operator|==
 literal|34
 condition|)
-name|jjCheckNAddTwoStates
+name|jjCheckNAddStates
 argument_list|(
-literal|15
+literal|0
 argument_list|,
-literal|17
+literal|2
 argument_list|)
 expr_stmt|;
 break|break;
@@ -984,26 +987,9 @@ literal|0L
 condition|)
 name|jjCheckNAddStates
 argument_list|(
-literal|5
+literal|0
 argument_list|,
-literal|7
-argument_list|)
-expr_stmt|;
-break|break;
-case|case
-literal|16
-case|:
-if|if
-condition|(
-name|curChar
-operator|==
-literal|34
-condition|)
-name|jjCheckNAddStates
-argument_list|(
-literal|5
-argument_list|,
-literal|7
+literal|2
 argument_list|)
 expr_stmt|;
 break|break;
@@ -1199,9 +1185,9 @@ literal|18
 expr_stmt|;
 name|jjCheckNAddStates
 argument_list|(
-literal|0
+literal|3
 argument_list|,
-literal|4
+literal|7
 argument_list|)
 expr_stmt|;
 break|break;
@@ -1407,9 +1393,9 @@ literal|18
 expr_stmt|;
 name|jjCheckNAddStates
 argument_list|(
-literal|0
+literal|3
 argument_list|,
-literal|4
+literal|7
 argument_list|)
 expr_stmt|;
 block|}
@@ -1728,9 +1714,9 @@ literal|15
 case|:
 name|jjAddStates
 argument_list|(
-literal|5
+literal|0
 argument_list|,
-literal|7
+literal|2
 argument_list|)
 expr_stmt|;
 break|break;
@@ -1909,9 +1895,9 @@ literal|18
 expr_stmt|;
 name|jjCheckNAddStates
 argument_list|(
-literal|0
+literal|3
 argument_list|,
-literal|4
+literal|7
 argument_list|)
 expr_stmt|;
 break|break;
@@ -2239,9 +2225,9 @@ literal|18
 expr_stmt|;
 name|jjCheckNAddStates
 argument_list|(
-literal|0
+literal|3
 argument_list|,
-literal|4
+literal|7
 argument_list|)
 expr_stmt|;
 block|}
@@ -2266,9 +2252,9 @@ argument_list|)
 condition|)
 name|jjAddStates
 argument_list|(
-literal|5
+literal|0
 argument_list|,
-literal|7
+literal|2
 argument_list|)
 expr_stmt|;
 break|break;
@@ -2342,9 +2328,9 @@ literal|18
 expr_stmt|;
 name|jjCheckNAddStates
 argument_list|(
-literal|0
+literal|3
 argument_list|,
-literal|4
+literal|7
 argument_list|)
 expr_stmt|;
 break|break;
@@ -4614,6 +4600,12 @@ index|[]
 name|jjnextStates
 init|=
 block|{
+literal|15
+block|,
+literal|17
+block|,
+literal|18
+block|,
 literal|29
 block|,
 literal|32
@@ -4623,12 +4615,6 @@ block|,
 literal|33
 block|,
 literal|30
-block|,
-literal|15
-block|,
-literal|17
-block|,
-literal|18
 block|,
 literal|20
 block|,
