@@ -36,35 +36,7 @@ name|lucene
 operator|.
 name|analysis
 operator|.
-name|Analyzer
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|LowerCaseTokenizer
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|SimpleAnalyzer
+name|*
 import|;
 end_import
 
@@ -79,48 +51,6 @@ operator|.
 name|analysis
 operator|.
 name|Token
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|TokenFilter
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|TokenStream
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|analysis
-operator|.
-name|WhitespaceAnalyzer
 import|;
 end_import
 
@@ -1240,6 +1170,28 @@ name|WhitespaceAnalyzer
 argument_list|()
 argument_list|,
 literal|"Ã¼mlaut"
+argument_list|)
+expr_stmt|;
+name|assertQueryEquals
+argument_list|(
+literal|"\"\""
+argument_list|,
+operator|new
+name|KeywordAnalyzer
+argument_list|()
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+name|assertQueryEquals
+argument_list|(
+literal|"foo:\"\""
+argument_list|,
+operator|new
+name|KeywordAnalyzer
+argument_list|()
+argument_list|,
+literal|"foo:"
 argument_list|)
 expr_stmt|;
 name|assertQueryEquals
